<resources>
    <string name="app_name">Victor_Delgado_IMDBAPPV2.O</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_edit_user">Edit User</string>
    <string name="sign_in_with_google_prompt">Por favor, inicia sesión con Google para acceder a esta cuenta.</string>
    <string name="sign_in_with_facebook_prompt">Por favor, inicia sesión con Facebook para acceder a esta cuenta.</string>
    <string name="authentication_failed">La autenticación falló. Por favor, inténtalo de nuevo.</string>

    <string name="menu_top10">Top 10</string>
    <string name="menu_favoritas">Favoritas</string>
    <string name="menu_buscar_pelicula">Buscar Película</string>

    <string name="default_web_client_id">AIzaSyCJaVg7yGPTkXpNh6k94KQSeLjYGeoQJZw</string>

    <string name="use_google_to_sign_in">Por favor, usa Google para iniciar sesión.</string>
    <string name="use_facebook_to_sign_in">Por favor, usa Facebook para iniciar sesión.</string>

    <string name="facebook_app_id">1601100623944030</string>
    <string name="fb_login_protocol_scheme">fb1601100623944030</string>
    <string name="facebook_client_token">9c1fc38522ef62d025ee2b2013fcf583</string>
    <string name="facebook_login_cancelled">Inicio de sesión con Facebook cancelado</string>
    <string name="facebook_login_failed">Error al iniciar sesión con Facebook</string>
    ç
    <string name="no_sign_in_methods">No hay métodos de inicio de sesión asociados con este correo electrónico.</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="google_sign_in_failed">Google sign-in failed.</string>
    <string name="logout">LOGOUT</string>
    <string name="enviar_por_sms">ENVIAR POR SMS</string>
    <string name="compartir">Compartir</string>
    <string name="introduce_el_ano">Introduce el año</string>
    <string name="buscar">Buscar</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="facebook_sign_in_cancelled">Facebook sign-in was cancelled.</string>
    <string name="facebook_sign_in_failed">Facebook sign-in failed. Please try again.</string>
    <string name="name">Name</string>
    <string name="enter_full_name">Enter full name</string>
    <string name="insert_email">Email</string>
    <string name="user_example_com">user@example.com</string>
    <string name="address">Address</string>
    <string name="address_not_set">Address not set</string>
    <string name="seleccionar_direccion">SELECCIONAR DIRECCION</string>
    <string name="select_a_country">Select a country</string>
    <string name="phone">Phone</string>
    <string name="enter_phone_number">Enter phone number</string>
    <string name="select_image">SELECT IMAGE</string>
    <string name="save">SAVE</string>
    <string name="imagen_del_usuario">Imagen del usuario</string>
    <string name="google_maps_key">AIzaSyAER7D-uvYpBOG3wZjz9z3AeGulqAci-OU</string>
    <string name="seleccione_una_direccion">Seleccione una dirección</string>
    <string name="campo_de_direccion">Campo de dirección</string>
    <string name="buscar_ubicacion">Buscar Ubicación</string>
    <string name="confirmar_ubicacion">Confirmar Ubicación</string>
</resources>