<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_top10">

    <fragment
        android:id="@+id/nav_top10"
        android:name="edu.pmdm.delgado_victorimdbapp.ui.home.Top10Fragment"
        android:label="@string/menu_top10"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="edu.pmdm.delgado_victorimdbapp.ui.gallery.FavoritesFragment"
        android:label="@string/menu_favoritas"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="edu.pmdm.delgado_victorimdbapp.ui.search.SearchFragment"
        android:label="@string/menu_buscar_pelicula"
        tools:layout="@layout/fragment_slideshow" />
</navigation>